--- a/OpenWrt_ARMv8.config
+++ b/OpenWrt_ARMv8.config
@@ -385,14 +385,45 @@ CONFIG_BPF_TOOLCHAIN_NONE=y
 # CONFIG_BPF_TOOLCHAIN_BUILD_LLVM is not set
 # CONFIG_EXTERNAL_TOOLCHAIN is not set
 CONFIG_NEED_TOOLCHAIN=y
-# CONFIG_TOOLCHAINOPTS is not set
+CONFIG_TOOLCHAINOPTS=y
 # CONFIG_EXTRA_TARGET_ARCH is not set
+
+#
+# Binary tools
+#
+# CONFIG_BINUTILS_USE_VERSION_2_32 is not set
+CONFIG_BINUTILS_USE_VERSION_2_34=y
+# CONFIG_BINUTILS_USE_VERSION_2_35_2 is not set
+# CONFIG_BINUTILS_USE_VERSION_2_36_1 is not set
+# CONFIG_BINUTILS_USE_VERSION_2_37 is not set
+# CONFIG_BINUTILS_USE_VERSION_2_38 is not set
 CONFIG_EXTRA_BINUTILS_CONFIG_OPTIONS=""
+
+#
+# Compiler
+#
+# CONFIG_GCC_USE_VERSION_7 is not set
+# CONFIG_GCC_USE_VERSION_8 is not set
+# CONFIG_GCC_USE_VERSION_9 is not set
+# CONFIG_GCC_USE_VERSION_10 is not set
+CONFIG_GCC_USE_VERSION_11=y
+# CONFIG_GCC_USE_GRAPHITE is not set
 CONFIG_EXTRA_GCC_CONFIG_OPTIONS=""
 # CONFIG_GCC_DEFAULT_PIE is not set
 # CONFIG_GCC_DEFAULT_SSP is not set
 # CONFIG_SJLJ_EXCEPTIONS is not set
 # CONFIG_INSTALL_GFORTRAN is not set
+
+#
+# C Library
+#
+# CONFIG_LIBC_USE_GLIBC is not set
+CONFIG_LIBC_USE_MUSL=y
+# CONFIG_MUSL_DISABLE_CRYPT_SIZE_HACK is not set
+
+#
+# Debuggers
+#
 CONFIG_GDB=y
 # CONFIG_GDB_PYTHON is not set
 # CONFIG_HAS_PREBUILT_LLVM_TOOLCHAIN is not set
@@ -400,7 +431,8 @@ CONFIG_USE_MUSL=y
 CONFIG_SSP_SUPPORT=y
 CONFIG_BINUTILS_VERSION_2_34=y
 CONFIG_BINUTILS_VERSION="2.34"
-CONFIG_GCC_VERSION="8.4.0"
+CONFIG_GCC_VERSION_11=y
+CONFIG_GCC_VERSION="11.2.0"
 # CONFIG_GCC_USE_IREMAP is not set
 CONFIG_LIBC="musl"
 CONFIG_TARGET_SUFFIX="musl"
