--- a/.github/workflows/OpenWrt_ARMv8.yml
+++ b/.github/workflows/OpenWrt_ARMv8.yml
@@ -188,7 +188,7 @@ jobs:
         KERNEL_REPO_URL: https://github.com/ophub/kernel/tree/main/pub/stable
         PACKAGE_SOC: s905d_s905x3_s922x_vplus_beikeyun_l1pro_s912
         KERNEL_AUTO_LATEST:  true
-        KERNEL_VERSION_NAME: 5.4.188_5.15.46_5.18.3
+        KERNEL_VERSION_NAME: 5.4.188_5.15.46_5.18.3_5.19.1
         WHOAMI: Yuan
         artifacts: ${{ env.FIRMWARE }}/*
 
