--- a/.github/workflows/OpenWrt_Selfuse.yml
+++ b/.github/workflows/OpenWrt_Selfuse.yml
@@ -228,6 +228,8 @@ jobs:
     - name: Remove old Releases
       uses: dev-drprasad/delete-older-releases@v0.2.0
       with:
+        token: ${{ secrets.GITHUB_TOKEN }}
+        repository: ${{ github.repository }}
         keep_latest: 6
         delete_tags: true
       env:
